@startuml

class ListResourcesUI {
}

class ListResourcesController{
projectList : ProjectList
listResources(projectCode)
}

class ProjectList{
projectList : ProjectList
getProject(projectCode)
}

class Project {
projectCode : int
resourceList : ResourceList
listResources(project)
}

class ResourceList{
resourceList : ResourceList
listResources()
add(resourceDTO)
}

class ResourceDTO {
email : String
role : String
}

class Resource {
account : Account
role : Role
startDate : Date
endDate : Date
percentAllocation : double
costPerHour : double
getRole()
createResourceDTO()
}

class Account {
profile : Profile
name : String
email : String
phone : String
photo : Photo
isActive : boolean
getEmail()
}

ListResourcesUI "1 " o-- "1 " ListResourcesController
ListResourcesController "1 " o-- "1 " ProjectList
ListResourcesController ..> Project
ProjectList "1 " *-- " * " Project : has
Project "1 " o-- "1 " ResourceList
ResourceList "1  " ..> ResourceDTO
ResourceDTO "1" .right.> Resource
ResourceList "1 " *-- " * " Resource : has
Resource "1 " o-- "1 " Account : has

@enduml